Added pseudo code for creating an element

--- a/index.html
+++ b/index.html
@@ -49,13 +49,17 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script>      $(document).ready(function(){
-      console.log("Im ready!!");
+    <script>
+      $(document).ready(function () {
+        console.log("Im ready!!");
 
-      // 1. Create an Element
+        // 1. Create an Element
 
+        // 2. Create content
 
-    })
-</script>
+        // 3. Append to existing to a parent element
+
+      });
+    </script>
   </body>
 </html>
