--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         function renderNow() {
           var queryURL =
-            "http://api.openweathermap.org/data/2.5/weather?q=" +
+            "https://api.openweathermap.org/data/2.5/weather?q=" +
             city +
             "&units=imperial&appid=" +
             apiKey;
@@ -100,7 +100,7 @@
             newEl.text(response.name + " (" + dateString + ")");
             newIcon.attr(
               "src",
-              "http://openweathermap.org/img/wn/" + icon + "@2x.png"
+              "https://openweathermap.org/img/wn/" + icon + "@2x.png"
             );
 
             // 3. Append to existing to a parent element
@@ -200,7 +200,7 @@
               secnewEl.text(dateString);
               iconWeath.attr(
                 "src",
-                "http://openweathermap.org/img/wn/" + icon + "@2x.png"
+                "https://openweathermap.org/img/wn/" + icon + "@2x.png"
               );
               newP.text("Temp: " + response.daily[i].temp.day);
               newP.append("&#8457;");
